--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "cairo_contracts"]
 	url = https://github.com/OpenZeppelin/cairo-contracts
 	path = lib/cairo_contracts
+[submodule "cairo-wadray"]
+	path = cairo-wadray
+	url = https://github.com/lindy-labs/cairo-wadray
